--- a/app/package.json
+++ b/app/package.json
@@ -7,28 +7,33 @@
     "build": "tsc",
     "compile": "tsc && node ./dist/src/main.js",
     "start:dev": "ts-node-dev src/main.ts",
-    "start": "node ./dist/src/main.js"
+    "start": "ts-node-dev src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fadedreams7pcplatform/common": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.0",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
+    "mongoose": "^8.0.1",
+    "redis": "^4.6.11",
+    "stripe": "^14.5.0",
+    "ts-node-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/express-session": "^1.17.10",
+    "nodemon": "^3.0.1",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-session": "^2.0.47",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
-    "body-parser": "^1.20.2",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "ts-node-dev": "^2.0.0"
   }
 }
