--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,6 @@
     "@types/cookie-session": "^2.0.47",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.21"
   }
 }
