--- a/app/package.json
+++ b/app/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "compile": "tsc && node ./dist/src/main.js",
-    "start:dev": "ts-node-dev src/main.ts",
-    "start": "ts-node-dev src/main.ts",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fadedreams7pcplatform/common": "^1.0.0",
-    "body-parser": "^1.20.2",
-    "connect-redis": "^7.1.0",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-prom-bundle": "^6.6.0",
-    "express-session": "^1.17.3",
-    "express-winston": "^4.2.0",
-    "ioredis": "^5.3.2",
-    "mongoose": "^8.0.1",
-    "redis": "^4.6.11",
-    "stripe": "^14.5.0",
-    "ts-node-dev": "^2.0.0",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/cookie-session": "^2.0.47",
-    "@types/cors": "^2.8.16",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/jest": "^29.5.10",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1"
-  }
+    "name": "app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "compile": "tsc && node ./dist/src/main.js",
+        "start:dev": "ts-node-dev src/main.ts",
+        "start": "ts-node-dev src/main.ts",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@fadedreams7org1/common": "^1.0.8",
+        "body-parser": "^1.20.2",
+        "connect-redis": "^7.1.0",
+        "cookie-session": "^2.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-prom-bundle": "^6.6.0",
+        "express-session": "^1.17.3",
+        "express-winston": "^4.2.0",
+        "ioredis": "^5.3.2",
+        "mongoose": "^8.0.1",
+        "redis": "^4.6.11",
+        "stripe": "^14.5.0",
+        "ts-node-dev": "^2.0.0",
+        "winston": "^3.11.0"
+    },
+    "devDependencies": {
+        "@types/body-parser": "^1.19.5",
+        "@types/cookie-session": "^2.0.47",
+        "@types/cors": "^2.8.16",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.21",
+        "@types/express-session": "^1.17.10",
+        "@types/jest": "^29.5.10",
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1"
+    }
 }
