--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
         "build": "tsc",
         "compile": "tsc && node ./dist/src/main.js",
         "start:dev": "ts-node-dev src/main.ts",
-        "start": "ts-node-dev src/main.ts",
+        "dev": "nodemon --watch src --ext ts --exec tsx -r ./src/main.ts",
+        "dev2": "ts-node-dev src/main.ts",
         "test": "jest"
     },
     "keywords": [],
