--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
         "jest": "^29.7.0",
         "nodemon": "^3.0.1",
         "supertest": "^6.3.3",
-        "ts-jest": "^29.1.1"
+        "ts-jest": "^29.1.1",
+        "typescript-transform-paths": "^3.5.3"
     }
 }
